terraform/main.tf
resource "aws_security_group" "monitoring_sg" {
  name = "monitoring-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3100
    to_port     = 3100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "monitoring_server" {
  ami           = "ami-0df7a207adb9748c7"
  instance_type = "t2.micro"

  vpc_security_group_ids = [aws_security_group.monitoring_sg.id]

  user_data = file("${path.module}/../monitoring/install.sh")

  tags = {
    Name = "DevOps-Monitoring"
  }
}
